--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,7 @@ button {
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .link:hover,
 .site-nav .link:focus,
@@ -446,7 +447,8 @@ button {
   border-radius: 4px;
   border: 1px solid #afb1b8;
   color: #afb1b8;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-items {
   fill: currentColor;
@@ -483,8 +485,8 @@ button {
   width: calc((100% - 60px) / 3);
   border: 1px solid rgb(238, 238, 238);
 }
-.portfolio-list .item:hover,
-.portfolio-list .item:focus {
+.portfolio-list .potf-item-link:hover,
+.portfolio-list .potf-item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -523,7 +525,8 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.potf-item:hover .text-portf {
+.potf-item-link:hover .text-portf,
+.potf-item-link:focus .text-portf {
   transform: translateY(0);
 }
 
