--- a/css/styles.css
+++ b/css/styles.css
@@ -19,16 +19,13 @@ body {
   background-color: var(--white-color);
   color: var(--primary-text-color);
 }
-
+/*
 button {
   display: inline-block;
   font-family: inherit;
-  border-radius: 4px;
-  padding: 10px 29px;
-  min-width: 200px;
-  text-align: center;
+  
 }
-
+*/
 .main-banner {
   height: 600px;
   max-width: 1600px;
@@ -48,6 +45,8 @@ button {
 }
 
 .btn-main {
+  border-radius: 4px;
+  min-width: 200px;
   padding: 10px 32px;
   font-weight: 700;
   font-size: 16px;
@@ -55,6 +54,7 @@ button {
   letter-spacing: 0.06em;
   color: var(--white-color);
   background-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
 }
 
 .btn-portf {
@@ -71,6 +71,7 @@ button {
   border-radius: 4px;
   border-color: transparent;
   width: 200px;
+  height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -492,6 +493,7 @@ button {
 }
 
 .portfolio-list img {
+  display: block;
   width: 100%;
 }
 .portfolio-list .item:not(:nth-child(3n)) {
@@ -502,9 +504,6 @@ button {
   margin-bottom: 30px;
 }
 
-.portfolio-list img {
-  display: block;
-}
 .portfolio-list .thumb-portf {
   position: relative;
   overflow: hidden;
@@ -604,7 +603,13 @@ footer {
 }
 .input-f {
   width: 358px;
+  height: 50px;
   margin-right: 12px;
+  padding-left: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: #2f303a;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 .foot-p {
   text-transform: uppercase;
@@ -651,8 +656,6 @@ footer {
 
   width: 100%;
   height: 100%;
-  margin-right: auto;
-  margin-left: auto;
 
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -666,11 +669,14 @@ footer {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 528px;
-  height: 581px;
+  width: 100%;
+  max-width: 528px;
+  min-height: 581px;
   background: #ffffff;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -680,20 +686,80 @@ footer {
   transform: translate(-50%, -50%) scale(1.2);
 }
 
+.close {
+  width: 11px;
+  height: 11px;
+  padding: 9px 9px 10px 10px;
+}
+
 .clsbtn {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
+
   position: absolute;
   top: 8px;
   right: 8px;
+
   padding: 0;
+  width: 30px;
+  height: 30px;
+
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  color: var(--accent-color);
   background-color: var(--white-color);
-
+  color: var(--accent-color);
   cursor: pointer;
+}
+
+/*
+.clsbtn {
+  position: absolute;
+  display: inline-block;
+  top: 8px;
+  right: 8px;
+
+  background: #ffffff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+*/
+.modal-text {
+  padding: 0px;
+  padding-bottom: 30px;
+  font-size: 20px;
+  margin: 0;
+}
+.modal-form {
+  width: 448px;
+}
+
+.modal-form label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+}
+
+.form-group {
+  position: relative;
+
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 28px;
+}
+.form-input {
+  padding: 12px 12px 12px 42px;
+  outline-color: var(--secondary-text-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.labelform {
+  position: absolute;
+  bottom: 44px;
+  transition: ;
 }
