--- a/css/styles.css
+++ b/css/styles.css
@@ -686,12 +686,7 @@ footer {
   transform: translate(-50%, -50%) scale(1.2);
 }
 
-.close {
-  width: 11px;
-  height: 11px;
-  padding: 9px 9px 10px 10px;
-}
-
+/*
 .clsbtn {
   display: flex;
   align-items: center;
@@ -708,24 +703,35 @@ footer {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white-color);
-  color: var(--accent-color);
   cursor: pointer;
 }
+*/
+.close {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 11px;
+  height: 11px;
+  padding: 0;
+  fill: var(--primary-text-color);
+}
 
-/*
+.clsbtn:hover .close,
+.clsbtn:focus .close {
+  fill: var(--accent-color);
+}
+
 .clsbtn {
   position: absolute;
-  display: inline-block;
-  top: 8px;
-  right: 8px;
-
-  background: #ffffff;
   width: 30px;
   height: 30px;
+  top: 8px;
+  right: 8px;
+  background: #ffffff;
+  border: 1px solid var(--secondary-text-color);
   border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
 }
-*/
+
 .modal-text {
   padding: 0px;
   padding-bottom: 30px;
@@ -762,4 +768,29 @@ footer {
   position: absolute;
   bottom: 44px;
   transition: ;
+}
+.comment {
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.labelcomment {
+  position: absolute;
+}
+
+.textarea-com {
+  padding: 12px 16px;
+  outline-color: var(--secondary-text-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+  min-height: 120px;
+  min-width: 448px;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  resize: none;
 }
