--- a/css/styles.css
+++ b/css/styles.css
@@ -731,13 +731,13 @@ footer {
   top: 8px;
   right: 8px;
   background: #ffffff;
-  border: 1px solid var(--secondary-text-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
 
 .modal-text {
   padding: 0px;
-  padding-bottom: 30px;
+  padding-bottom: 12px;
   font-size: 20px;
   margin: 0;
   text-align: center;
@@ -760,7 +760,7 @@ footer {
 
   display: flex;
   flex-direction: column-reverse;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
 }
 .form-input {
   padding: 12px 12px 12px 42px;
@@ -783,12 +783,6 @@ footer {
   display: flex;
   flex-direction: column-reverse;
 }
-.labelcomment {
-  position: absolute;
-  color: var(--secondary-text-color);
-  letter-spacing: 0.01em;
-  padding-bottom: 4px;
-}
 
 .textarea-com {
   padding: 12px 16px;
@@ -798,6 +792,7 @@ footer {
   cursor: pointer;
   min-height: 120px;
   min-width: 448px;
+  margin-top: 4px;
   margin-bottom: 20px;
   resize: none;
 }
