--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,7 @@ footer {
 
 .foot-cont {
   display: flex;
-  align-items: baseline;
+
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -600,6 +600,22 @@ footer {
   background-size: contain;
 }
 
+.footer-label {
+  display: flex;
+  flex-direction: column-reverse;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--white-color);
+}
+
+.footer-form {
+  display: flex;
+  align-items: baseline;
+}
+
 .msngrs-f {
   display: flex;
 }
@@ -607,12 +623,15 @@ footer {
   width: 358px;
   height: 50px;
   margin-right: 12px;
+  margin-top: 20px;
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.6);
   background-color: #2f303a;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
+
 .foot-p {
   text-transform: uppercase;
   margin-top: 0;
